<resources>
    <string name="app_name">Health Care Project</string>
    <string name="_24_7_healthcare">24*7 HealthCare</string>
    <string name="lab_test">LAB Test</string>
    <string name="homeimage">HomeImage</string>
    <string name="language_image">languageimage</string>
    <string name="buy_medicine">BUY MEDICINE</string>
    <string name="find_doctor">FIND DOCTOR</string>
    <string name="health_articles">HEALTH ARTICLES\n</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="logout">LOGOUT</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="family_physician">FAMILY PHYSICIANS</string>
    <string name="dietician">DIETICIAN</string>
    <string name="dentist">DENTIST</string>
    <string name="surgeon">SURGEON</string>
    <string name="cardiologists">CARDIOLOGISTS</string>
    <string name="back">BACK</string>
</resources>